fixed mobile faq alignment issue.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -772,6 +772,7 @@ span.event {
 #faqs button {
     font-size: large;
     color: #883eaa;
+    text-align: left;
 }
 
 #faqs h2 {
